<resources>
    <string name="app_name">Recetario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_new_recipe">Nueva receta</string>
    <string name="menu_favourite_recipes">Mis recetas favoritas</string>
    <string name="menu_search">Buscar receta</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_support">Soporte</string>
    <string name="menu_settings">Ajustes</string>


    <string name="button_next">Siguiente</string>
    <string name="button_save">Guardar</string>
    <string name="button_back">Atrás</string>

    <string name="recipe_title">Título</string>
    <string name="recipe_description">Descripción</string>
    <string name="recipe_type">Tipo de receta</string>
    <string name="recipe_category">Categoria</string>
    <string name="recipe_time">Tiempo (en minutos)</string>
    <string name="recipe_is_public">Mostrar la receta publicamente</string>
    <string name="recipe_image">Imagen</string>
    <string name="select_file">Seleccionar imagen</string>


    <string name="ingredients">Ingredientes</string>
    <string name="ingredient_name">Nombre</string>
    <string name="ingredient_quantity">Cantidad</string>
    <string name="ingredient_add">Añadir</string>
    <string name="delete">Eliminar</string>
    <string name="button_finish">Finalizar</string>

    <string name="steps_list">Listado de pasos</string>
    <string name="versions_list">Versiones</string>
    <string name="new_step">Nuevo paso</string>
    <string name="step">Paso</string>
    <string name="recipes_list">Recetas</string>
    <string name="recipe">Receta</string>
    <string name="search_is_public">Receta pública</string>
    <string name="search_time">Tiempo inferior a (en minutos)</string>
    <string name="button_search">Buscar</string>
    <string name="new_version">Nueva version</string>

</resources>
