<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new_recipe"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_recipe" />
        <item
            android:id="@+id/nav_favourite_recipes"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_favourite_recipes" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_sign_out" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
