<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipesbook.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_recipe"
        android:name="com.example.recipesbook.ui.recipe.RecipeFragment"
        android:label="@string/menu_new_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/nav_favourite_recipes"
        android:name="com.example.recipesbook.ui.favouriteRecipes.FavouriteRecipesFragment"
        android:label="@string/menu_favourite_recipes"
        tools:layout="@layout/fragment_recipe_list" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.recipesbook.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.recipesbook.ui.share.ShareFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.recipesbook.ui.stepsList.StepListFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_steps_list" />


</navigation>